EUREKA-899: fix SonarCloud smells (Math.clamp; single-throwing lambda in test)